--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -164,8 +164,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.8 s, sys: 5.24 s, total: 25 s\n",
-      "Wall time: 25 s\n"
+      "CPU times: user 19.8 s, sys: 5.17 s, total: 24.9 s\n",
+      "Wall time: 24.9 s\n"
      ]
     }
    ],
@@ -378,8 +378,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.7 s, sys: 4.97 s, total: 21.7 s\n",
-      "Wall time: 21.8 s\n"
+      "CPU times: user 18 s, sys: 5.01 s, total: 23 s\n",
+      "Wall time: 23 s\n"
      ]
     }
    ],
@@ -627,49 +627,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4982</th>\n",
-       "      <td>786731884</td>\n",
-       "      <td>Causal_Oversimplification</td>\n",
-       "      <td>2462</td>\n",
-       "      <td>2574</td>\n",
-       "      <td>112</td>\n",
-       "      <td>article786731884.txt</td>\n",
-       "      <td>133</td>\n",
+       "      <th>5789</th>\n",
+       "      <td>999000312</td>\n",
+       "      <td>Name_Calling,Labeling</td>\n",
+       "      <td>771</td>\n",
+       "      <td>779</td>\n",
+       "      <td>8</td>\n",
+       "      <td>article999000312.txt</td>\n",
+       "      <td>166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1872</th>\n",
-       "      <td>732610971</td>\n",
-       "      <td>Repetition</td>\n",
-       "      <td>200</td>\n",
-       "      <td>223</td>\n",
-       "      <td>23</td>\n",
-       "      <td>article732610971.txt</td>\n",
-       "      <td>270</td>\n",
+       "      <th>4318</th>\n",
+       "      <td>780414700</td>\n",
+       "      <td>Slogans</td>\n",
+       "      <td>18812</td>\n",
+       "      <td>18834</td>\n",
+       "      <td>22</td>\n",
+       "      <td>article780414700.txt</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>279</th>\n",
-       "      <td>697959084</td>\n",
-       "      <td>Thought-terminating_Cliches</td>\n",
-       "      <td>2647</td>\n",
-       "      <td>2664</td>\n",
-       "      <td>17</td>\n",
-       "      <td>article697959084.txt</td>\n",
-       "      <td>200</td>\n",
+       "      <th>1791</th>\n",
+       "      <td>730389374</td>\n",
+       "      <td>Name_Calling,Labeling</td>\n",
+       "      <td>2955</td>\n",
+       "      <td>2970</td>\n",
+       "      <td>15</td>\n",
+       "      <td>article730389374.txt</td>\n",
+       "      <td>135</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      filenumber                        label  span_start  span_end  span_len  \\\n",
-       "4982   786731884    Causal_Oversimplification        2462      2574       112   \n",
-       "1872   732610971                   Repetition         200       223        23   \n",
-       "279    697959084  Thought-terminating_Cliches        2647      2664        17   \n",
+       "      filenumber                  label  span_start  span_end  span_len  \\\n",
+       "5789   999000312  Name_Calling,Labeling         771       779         8   \n",
+       "4318   780414700                Slogans       18812     18834        22   \n",
+       "1791   730389374  Name_Calling,Labeling        2955      2970        15   \n",
        "\n",
        "                  filename  element_in_list  \n",
-       "4982  article786731884.txt              133  \n",
-       "1872  article732610971.txt              270  \n",
-       "279   article697959084.txt              200  "
+       "5789  article999000312.txt              166  \n",
+       "4318  article780414700.txt               85  \n",
+       "1791  article730389374.txt              135  "
       ]
      },
      "execution_count": 27,
@@ -804,8 +804,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.16 s, sys: 3.06 ms, total: 4.17 s\n",
-      "Wall time: 4.16 s\n"
+      "CPU times: user 4.22 s, sys: 3.76 ms, total: 4.23 s\n",
+      "Wall time: 4.22 s\n"
      ]
     }
    ],
@@ -1030,7 +1030,7 @@
    "metadata": {},
    "source": [
     "> ### <span style=\"color:#8800FF\"> Approximately four out of every ten sentences contains an instance of propaganda. In terms of the training data being representative of an \"average online news article\" this strikes me as far too high. I would expect something more like 0.25 (or fewer) out of every ten sentences containing propaganda however, I have no justification for that number. It's possible that propaganda is more common than I am inclined to think.   \n",
-    "> ### <span style=\"color:#8800FF\"> If we wanted to generalize any \"downstream\" classifiers to random news articles it's possible that the classifiers would predict *some* propaganda label more frequently than they should resulting in a higher number of false positives simply due to the training data. However, one clear benefit of this approach, as opposed to collecting new negative samples on our own, is that we can be highly confident that the negative samples are truly negative samples. If we collected our own news articles at random we'd likely have some instances of actual propaganda labeled as \"No_Propaganda\"."
+    "> ### <span style=\"color:#8800FF\"> If we wanted to generalize any classifiers to random news articles it's possible that the classifiers would predict *some* propaganda label more frequently than they should resulting in a higher number of false positives simply due to the training data. However, one clear benefit of this approach, as opposed to collecting new negative samples on our own, is that we can be highly confident that the negative samples are truly negative samples. If we collected our own news articles at random we'd likely have some instances of actual propaganda labeled as \"No_Propaganda\"."
    ]
   },
   {
