start LR cleanup

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -4,19 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Best Logistic Regression model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1 Load data & generate features"
+    "# <span style=\"color:#FF8800\"> Load data & generate features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the training data\n",
-    "train_df = pd.read_csv(\"train_data.tsv\", \n",
+    "train_df = pd.read_csv(\"datasets/train_data.tsv\", \n",
     "                       sep = \"\\t\",\n",
     "                       usecols = [\"label\",\"label_binary\",\"text\"]\n",
     "                      )"
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,40 +70,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>785</th>\n",
+       "      <th>2536</th>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
-       "      <td>.\\nOn Monday of this week, I predicted that Tr...</td>\n",
+       "      <td>the 69-year-old Jewish man (wearing a kippah o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>Rapporteur called it torture.\\nI know Julian A...</td>\n",
+       "      <th>2396</th>\n",
+       "      <td>Thought-terminating_Cliches</td>\n",
+       "      <td>Propaganda</td>\n",
+       "      <td>It is over</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5957</th>\n",
+       "      <th>3176</th>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
-       "      <td>him that he deserves to die.\\n\"It makes me fee...</td>\n",
+       "      <td>Politician?\\nWhom do you consider to be the mo...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              label   label_binary  \\\n",
-       "785   No_Propaganda  No_Propaganda   \n",
-       "144   No_Propaganda  No_Propaganda   \n",
-       "5957  No_Propaganda  No_Propaganda   \n",
+       "                            label   label_binary  \\\n",
+       "2536                No_Propaganda  No_Propaganda   \n",
+       "2396  Thought-terminating_Cliches     Propaganda   \n",
+       "3176                No_Propaganda  No_Propaganda   \n",
        "\n",
        "                                                   text  \n",
-       "785   .\\nOn Monday of this week, I predicted that Tr...  \n",
-       "144   Rapporteur called it torture.\\nI know Julian A...  \n",
-       "5957  him that he deserves to die.\\n\"It makes me fee...  "
+       "2536  the 69-year-old Jewish man (wearing a kippah o...  \n",
+       "2396                                         It is over  \n",
+       "3176  Politician?\\nWhom do you consider to be the mo...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,50 +114,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add features\n",
-    "\n",
-    "import textstat\n",
-    "\n",
-    "train_df[\"sent_count\"] = train_df.apply(lambda x: textstat.sentence_count(x[\"text\"]), axis=1)\n",
-    "train_df[\"flesch_reading\"] = train_df.apply(lambda x: textstat.flesch_reading_ease(x[\"text\"]), axis=1)\n",
-    "train_df[\"difficult_words\"] = train_df.apply(lambda x: textstat.difficult_words(x[\"text\"]), axis=1)\n",
-    "train_df[\"read_index\"] = train_df.apply(lambda x: textstat.automated_readability_index(x[\"text\"]), axis=1)\n",
-    "train_df[\"syllable_count\"] = train_df.apply(lambda x: textstat.syllable_count(x[\"text\"]), axis=1)\n",
-    "train_df[\"text_standard\"] = train_df.apply(lambda x: textstat.text_standard(x[\"text\"], float_output=True), axis=1)\n",
-    "\n",
-    "train_df[\"text_len\"] = train_df.apply(lambda x: len(x[\"text\"]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_cols = ['text', 'sent_count', 'flesch_reading',\n",
-    "       'difficult_words', 'read_index', 'syllable_count', 'text_standard',\n",
-    "       'text_len']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Train Test split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.model_selection import train_test_split"
+    "> ### The training data, which was created in generate_data.ipynb, contains +15,900 samples with binary and multi-class labels. Here we'll focus on multi-class classification."
    ]
   },
   {
@@ -174,34 +126,214 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#     train_df[[\"text\", 'text_len', 'sent_count',\n",
-    "#        'flesch_reading', 'difficult_words', 'read_index', \n",
-    "#               'syllable_count','text_standard']], \n",
-    "#     train_df[\"label_binary\"], \n",
-    "#     train_size = 0.7, \n",
-    "#     random_state = 3, \n",
-    "#     shuffle = True, \n",
-    "#     stratify=train_df[\"label_binary\"]) #use stratify here to ensure proportions of labels are maintained"
+    "import textstat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df[\"sent_count\"] = train_df.apply(lambda x: textstat.sentence_count(x[\"text\"]), axis = 1) # number of sentences in span\n",
+    "train_df[\"flesch_reading\"] = train_df.apply(lambda x: textstat.flesch_reading_ease(x[\"text\"]), axis = 1) # Flesch reading ease score, higher is easier to read\n",
+    "train_df[\"difficult_words\"] = train_df.apply(lambda x: textstat.difficult_words(x[\"text\"]), axis = 1) # count of words with 2 or more syllables, seems like low threshold\n",
+    "train_df[\"read_index\"] = train_df.apply(lambda x: textstat.automated_readability_index(x[\"text\"]), axis = 1) # approximates the grade level needed to comprehend the text\n",
+    "train_df[\"syllable_count\"] = train_df.apply(lambda x: textstat.syllable_count(x[\"text\"]), axis = 1) # count of the number of syllables in the given text\n",
+    "train_df[\"text_standard\"] = train_df.apply(lambda x: textstat.text_standard(x[\"text\"], float_output = True), axis = 1) # combines a number of readability scores, the estimated school grade level to understand text\n",
+    "train_df[\"text_len\"] = train_df.apply(lambda x: len(x[\"text\"]), axis=1) # the length of the text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>label_binary</th>\n",
+       "      <th>No_Propaganda</th>\n",
+       "      <th>Propaganda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sent_count</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>flesch_reading</th>\n",
+       "      <td>67.2</td>\n",
+       "      <td>44.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>difficult_words</th>\n",
+       "      <td>3.2</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>read_index</th>\n",
+       "      <td>8.3</td>\n",
+       "      <td>10.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>syllable_count</th>\n",
+       "      <td>18.8</td>\n",
+       "      <td>12.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>text_standard</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>7.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>text_len</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>48.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "label_binary     No_Propaganda  Propaganda\n",
+       "sent_count                 1.2         1.1\n",
+       "flesch_reading            67.2        44.5\n",
+       "difficult_words            3.2         2.2\n",
+       "read_index                 8.3        10.7\n",
+       "syllable_count            18.8        12.6\n",
+       "text_standard              7.8         7.9\n",
+       "text_len                  75.0        48.3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_stats = round(train_df.groupby(\"label_binary\").mean(),1)\n",
+    "text_stats.T"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Transform Features"
+    "> ### Based on research into related work it appears that creating some linguistic features from the sample text may help with the classification task.\n",
+    "> ### <span style=\"color:#8800ff\"> In fact, we can see that texts featuring propaganda are shorter (text_len), more difficult to read (flesch_reading, lower is harder to understand), and contain fewer syllables (syllable_count) than texts without propaganda."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "feature_cols = ['text', 'sent_count', 'flesch_reading',\n",
+    "                'difficult_words', 'read_index', 'syllable_count',\n",
+    "                'text_standard','text_len']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:#FF8800\"> Train test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    train_df[feature_cols], \n",
+    "    train_df[\"label\"], \n",
+    "    train_size = 0.7, \n",
+    "    random_state = 3, \n",
+    "    shuffle = True, \n",
+    "    stratify = train_df[\"label\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Here we're creating a training and testing split from just the training data so we can perform grid search and tune the hyperparameters.\n",
     "\n",
-    "word_vectorizer = TfidfVectorizer(strip_accents = \"unicode\", lowercase = True, \n",
-    "                             stop_words = \"english\", analyzer = \"word\", token_pattern = \"[a-z]+\", smooth_idf = True, ngram_range=(1,3))"
+    "> ### We're using a standard 70-30 train-test split, shuffling the samples, and stratifying the samples so the training and testing data contain similar proportions of the labels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:#FF8800\"> Transform features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_vectorizer = TfidfVectorizer(\n",
+    "    strip_accents = \"unicode\", \n",
+    "    lowercase = True,\n",
+    "    stop_words = \"english\", \n",
+    "    analyzer = \"word\", \n",
+    "    token_pattern = \"[a-z]+\", \n",
+    "    smooth_idf = True, \n",
+    "    ngram_range=(1,3)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer"
    ]
   },
   {
@@ -210,8 +342,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
-    "\n",
     "column_trans = ColumnTransformer([('tfidf', word_vectorizer, 'text')], remainder=\"passthrough\")\n",
     "\n",
     "# train_transformed = column_trans.fit_transform(X_train)\n",
