train test split

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -328,6 +328,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### I want to create a tf-idf statistic based on the text in the samples in order to utilize insights related to how informative words are based on how frequently they are used 1) in the corpus overall and 2) in a particular sample.\n",
+    "> ### TfidfVectorizer will generate a sparse matrix.\n",
+    "> ### I'm employing smoothing so each token is counted at least once in the vocabulary. This is more relevant when we apply the tfidf matrix created here to the testing data we split out earlier."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
