initiate grid search

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "> ### Here we're creating a training and testing split from just the training data so we can perform grid search and tune the hyperparameters.\n",
     "\n",
-    "> ### We're using a standard 70-30 train-test split, shuffling the samples, and stratifying the samples so the training and testing data contain similar proportions of the labels."
+    "> ### We're using a standard 70-30 training testing split, shuffling the samples, and stratifying the samples so the training and testing data contain similar proportions of the labels."
    ]
   },
   {
@@ -331,9 +331,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### I want to create a tf-idf statistic based on the text in the samples in order to utilize insights related to how informative words are based on how frequently they are used 1) in the corpus overall and 2) in a particular sample.\n",
+    "> ### We want to create a tf-idf statistic based on the text in the samples in order to utilize insights related to how informative words are based on how frequently they are used 1) in the corpus overall and 2) in a particular sample.\n",
     "> ### TfidfVectorizer will generate a sparse matrix.\n",
-    "> ### I'm employing smoothing so each token is counted at least once in the vocabulary. This is more relevant when we apply the tfidf matrix created here to the testing data we split out earlier."
+    "> ### We're employing smoothing so each token is counted at least once in the vocabulary. This is more relevant when we apply the tfidf created here to the testing data we split out earlier."
    ]
   },
   {
@@ -347,45 +347,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_trans = ColumnTransformer([('tfidf', word_vectorizer, 'text')], remainder=\"passthrough\")\n",
+    "column_trans = ColumnTransformer([('tfidf', word_vectorizer, 'text')], remainder = \"passthrough\")\n",
     "\n",
     "# train_transformed = column_trans.fit_transform(X_train)\n",
     "# test_transformed = column_trans.transform(X_test) #must use same transform call for dev data\n",
     "\n",
     "\n",
-    "train_transformed = column_trans.fit_transform(train_df[feature_cols])\n",
+    "# train_transformed = column_trans.fit_transform(train_df[feature_cols])\n",
+    "train_transformed = column_trans.fit_transform(X_train[feature_cols])\n",
+    "\n",
     "# test_transformed = column_trans.transform(train_df[feature_cols]) #must use same transform call for dev data"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### ColumnTransformer is useful here since it allows us to apply the tf-idf vectorizer to the sample text and \"pass-through\" the other features so we end up with a complete and coherent sparse matrix. If we didn't use \"passthrough\" in ColumnTransformer then we would have to map the columns of the other features onto the SciPy Compressed Sparse Row Matrix ourselves which is a bit challenging due to its structure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:#FF8800\"> Perform grid search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_lr = LogisticRegression(C=10000, class_weight='balanced', dual=False,\n",
-    "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
-    "                   max_iter=100, multi_class='auto', n_jobs=-1, penalty='l2',\n",
-    "                   random_state=234, solver='liblinear', tol=0.0001, verbose=0,\n",
-    "                   warm_start=False)"
+    "logistic_regression = LogisticRegression(n_jobs = -1)\n",
+    "\n",
+    "param_grid = [{\n",
+    "        \"penalty\":[\"l2\",\"none\"],\n",
+    "        \"C\":[10000,1000,1],\n",
+    "        \"fit_intercept\": [True, False],\n",
+    "        \"class_weight\": [None, \"balanced\"],\n",
+    "        \"solver\": [\"lbfgs\",\"liblinear\"] # running this with other solvers like \"sag\" or \"newton-cg\" will likely result in hours of waiting\n",
+    "}]\n",
+    "\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator = logistic_regression,\n",
+    "    param_grid = param_grid,\n",
+    "    cv = 10\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -393,26 +420,106 @@
      "output_type": "stream",
      "text": [
       "/home/bryan/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/linear_model/_logistic.py:1539: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  \" = {}.\".format(effective_n_jobs(self.n_jobs)))\n"
+      "  \" = {}.\".format(effective_n_jobs(self.n_jobs)))\n",
+      "/home/bryan/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/svm/_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/home/bryan/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/linear_model/_logistic.py:1505: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
+      "  \"Setting penalty='none' will ignore the C and l1_ratio \"\n",
+      "/home/bryan/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "ValueError: penalty='none' is not supported for the liblinear solver\n",
+      "\n",
+      "  FitFailedWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1h 55min 13s, sys: 1h 38min 33s, total: 3h 33min 47s\n",
+      "Wall time: 1h 22min\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=10000, class_weight='balanced', dual=False,\n",
-       "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
-       "                   max_iter=100, multi_class='auto', n_jobs=-1, penalty='l2',\n",
-       "                   random_state=234, solver='liblinear', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
+       "GridSearchCV(cv=10, error_score=nan,\n",
+       "             estimator=LogisticRegression(C=1.0, class_weight=None, dual=False,\n",
+       "                                          fit_intercept=True,\n",
+       "                                          intercept_scaling=1, l1_ratio=None,\n",
+       "                                          max_iter=100, multi_class='auto',\n",
+       "                                          n_jobs=-1, penalty='l2',\n",
+       "                                          random_state=None, solver='lbfgs',\n",
+       "                                          tol=0.0001, verbose=0,\n",
+       "                                          warm_start=False),\n",
+       "             iid='deprecated', n_jobs=None,\n",
+       "             param_grid=[{'C': [10000, 1000, 1],\n",
+       "                          'class_weight': [None, 'balanced'],\n",
+       "                          'fit_intercept': [True, False],\n",
+       "                          'penalty': ['l2', 'none'],\n",
+       "                          'solver': ['lbfgs', 'liblinear']}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# best_lr.fit(train_transformed, train_df[\"label_binary\"])\n",
+    "%%time\n",
+    "grid_search.fit(train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## access aspects of grid search's best model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:#FF8800\"> Best logistic regression model\n",
+    "> ### Based on a more extensive grid search I opted to use the model parameterized below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_lr = LogisticRegression(C = 10000, class_weight = 'balanced', dual = False,\n",
+    "                   fit_intercept = True, intercept_scaling = 1, l1_ratio = None,\n",
+    "                   max_iter = 100, multi_class = 'auto', n_jobs = -1, penalty = 'l2',\n",
+    "                   random_state = 234, solver = 'liblinear', tol = 0.0001, verbose = 0,\n",
+    "                   warm_start = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [11149, 15928]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-9d5e07e0feef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbest_lr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_transformed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"label\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/linear_model/_logistic.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1525\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1526\u001b[0m         X, y = check_X_y(X, y, accept_sparse='csr', dtype=_dtype, order=\"C\",\n\u001b[0;32m-> 1527\u001b[0;31m                          accept_large_sparse=solver != 'liblinear')\n\u001b[0m\u001b[1;32m   1528\u001b[0m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1529\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    763\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 765\u001b[0;31m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    766\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    767\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Code/python-environments/SI630/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m         raise ValueError(\"Found input variables with inconsistent numbers of\"\n\u001b[0;32m--> 212\u001b[0;31m                          \" samples: %r\" % [int(l) for l in lengths])\n\u001b[0m\u001b[1;32m    213\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [11149, 15928]"
+     ]
+    }
+   ],
+   "source": [
     "best_lr.fit(train_transformed, train_df[\"label\"])"
    ]
   },
