finish logistic regression

--- a/dummy_classifier.ipynb
+++ b/dummy_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,40 +68,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2846</th>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>dossier was interlaced with condemnations of t...</td>\n",
+       "      <th>6432</th>\n",
+       "      <td>Bandwagon,Reductio_ad_hitlerum</td>\n",
+       "      <td>Propaganda</td>\n",
+       "      <td>Adolf Hitler as “a very great man</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2735</th>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>No_Propaganda</td>\n",
-       "      <td>make?\\nMr Cruz sent the text of his letter (wr...</td>\n",
+       "      <th>8801</th>\n",
+       "      <td>Whataboutism,Straw_Men,Red_Herring</td>\n",
+       "      <td>Propaganda</td>\n",
+       "      <td>a bigger problem is the fact they actually cha...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6375</th>\n",
+       "      <th>14714</th>\n",
        "      <td>No_Propaganda</td>\n",
        "      <td>No_Propaganda</td>\n",
-       "      <td>into dollars, an investigative report by the S...</td>\n",
+       "      <td>– even for people who are mostly OK with Franc...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              label   label_binary  \\\n",
-       "2846  No_Propaganda  No_Propaganda   \n",
-       "2735  No_Propaganda  No_Propaganda   \n",
-       "6375  No_Propaganda  No_Propaganda   \n",
+       "                                    label   label_binary  \\\n",
+       "6432       Bandwagon,Reductio_ad_hitlerum     Propaganda   \n",
+       "8801   Whataboutism,Straw_Men,Red_Herring     Propaganda   \n",
+       "14714                       No_Propaganda  No_Propaganda   \n",
        "\n",
-       "                                                   text  \n",
-       "2846  dossier was interlaced with condemnations of t...  \n",
-       "2735  make?\\nMr Cruz sent the text of his letter (wr...  \n",
-       "6375  into dollars, an investigative report by the S...  "
+       "                                                    text  \n",
+       "6432                   Adolf Hitler as “a very great man  \n",
+       "8801   a bigger problem is the fact they actually cha...  \n",
+       "14714  – even for people who are mostly OK with Franc...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,17 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.dummy import DummyClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +155,7 @@
        "DummyClassifier(constant=None, random_state=8, strategy='stratified')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -217,35 +216,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1857</th>\n",
+       "      <th>2582</th>\n",
        "      <td>Loaded_Language</td>\n",
        "      <td>Propaganda</td>\n",
-       "      <td>total dictatorship</td>\n",
+       "      <td>severe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>Loaded_Language</td>\n",
+       "      <th>2725</th>\n",
+       "      <td>Repetition</td>\n",
        "      <td>Propaganda</td>\n",
-       "      <td>boldly</td>\n",
+       "      <td>the affidavit says</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1086</th>\n",
-       "      <td>Flag-Waving</td>\n",
-       "      <td>Propaganda</td>\n",
-       "      <td>British girls</td>\n",
+       "      <th>1327</th>\n",
+       "      <td>No_Propaganda</td>\n",
+       "      <td>No_Propaganda</td>\n",
+       "      <td>facts far outweighed the dangers which are cit...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                label label_binary                text\n",
-       "1857  Loaded_Language   Propaganda  total dictatorship\n",
-       "124   Loaded_Language   Propaganda              boldly\n",
-       "1086      Flag-Waving   Propaganda       British girls"
+       "                label   label_binary  \\\n",
+       "2582  Loaded_Language     Propaganda   \n",
+       "2725       Repetition     Propaganda   \n",
+       "1327    No_Propaganda  No_Propaganda   \n",
+       "\n",
+       "                                                   text  \n",
+       "2582                                             severe  \n",
+       "2725                                 the affidavit says  \n",
+       "1327  facts far outweighed the dangers which are cit...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,18 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import numpy as np"
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +523,7 @@
        "0.42"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
